# mesh

./: CMakeLists.txt  README.md  diagram.json  teste1.html  teste2.html  teste3.html  teste4.html  wokwi.toml
main/: CMakeLists.txt  Kconfig.projbuild  aux.c  idf_component.yml  main.c
main/include/: aux.h
